greyed out cancelled meetings and added reactivate button

--- a/Alllive/Views/Meeting/ScheduleMeeting.cshtml
+++ b/Alllive/Views/Meeting/ScheduleMeeting.cshtml
@@ -405,7 +405,9 @@
     <p>
         @Html.ValidationSummary()
     </p>
+        @Html.ActionLink("Back to schedule", "Schedule", "User",null,new { @class="btn btn-default"});
     <input type="submit" value="Save" class="btn btn-primary"/>
+
     
         
 
