--- a/Alllive/Views/Meeting/_Attendee.cshtml
+++ b/Alllive/Views/Meeting/_Attendee.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Alllive.Models.Attendee
 
-    <div class="row">
+    <div class="row" id="attendee@(Model.AttendeeID)">
         <div class="col-sm-5">
             @Model.Name
         </div>
@@ -9,7 +9,7 @@
         </div>
         <div class="col-sm-2">
             <button class="btn btn-primary" type="button" data-toggle="modal" data-target="#editAttendee"
-                    onclick="editAttendeeClick(@Model.AttendeeID,'@Model.Email','@Model.Name',@Model.UserID,@Model.Rate)">
+                    onclick="editAttendeeClick(@Model.AttendeeID,'@Model.Email','@Model.Name',@(Model.UserID??0),@(Model.Rate??0))">
                 <i class="glyphicon glyphicon-pencil"></i>
             </button>
             <button class="btn btn-danger" type="button" 
