--- a/Alllive/Views/Shared/_Layout.cshtml
+++ b/Alllive/Views/Shared/_Layout.cshtml
@@ -54,7 +54,9 @@
                     }
                     else
                     {
+
                         @Html.ActionLink("Profile", "ViewProfile", "User", null, new { style = "position: absolute; right:70px; top:10px;" })
+                        @Html.ActionLink("Messages", "Messaging", "User", null, new { style = "position: absolute; right:150px; top:10px;" })
 
                         @Html.ActionLink("Sign Out", "Logoff", "User", false, new { style = "position: absolute; right:10px; top:10px;" })
                     }
