--- a/Alllive/Views/Shared/_Layout.cshtml
+++ b/Alllive/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                     {
 
                         @Html.ActionLink("Profile", "ViewProfile", "User", null, new { style = "position: absolute; right:70px; top:10px;" })
-                        @Html.ActionLink("Messages", "Messaging", "User", null, new { style = "position: absolute; right:150px; top:10px;" })
+                        @Html.ActionLink("Messages", "MessageCenter", "Message", null, new { style = "position: absolute; right:150px; top:10px;" })
 
                         @Html.ActionLink("Sign Out", "Logoff", "User", false, new { style = "position: absolute; right:10px; top:10px;" })
                     }
