--- a/Alllive/Views/User/ViewProfile.cshtml
+++ b/Alllive/Views/User/ViewProfile.cshtml
@@ -1,27 +1,57 @@
 ﻿@model Alllive.Models.TutorViewModel
 
 
-<div class="container">
-    <div class="row">
-        <div class="col-sm-3">
-            <label> Name</label>
-            
-        </div>
-        <div class="col-sm-9">
-            <span>@Model.User.FirstName @Model.User.LastName</span>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-3">
-            <label>UserName</label>
-        </div>
-        <div class="col-sm-9">
-            <span>@Model.User.UserName</span>
-        </div>
+    <div class="container">
+        @using (Ajax.BeginForm("SaveUserProfile", new AjaxOptions { OnSuccess = "SaveUserProfile_Success", HttpMethod = "POST" }))
+        {
+            @Html.HiddenFor(a => a.User.UserID)
+            @Html.HiddenFor(a => a.User.UserName)
+
+            <div class="row">
+                <div class="col-sm-3">
+                    <label>First Name</label>
+
+                </div>
+                <div class="col-sm-9">
+                    @Html.TextBoxFor(a => a.User.FirstName, new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3">
+                    <label>Last Name</label>
+
+                </div>
+                <div class="col-sm-9">
+                    @Html.TextBoxFor(a => a.User.LastName, new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3">
+                    <label>Time Zone</label>
+
+                </div>
+                <div class="col-sm-9">
+                    @Html.DropDownListFor(a => a.User.TimeZone, (IEnumerable<SelectListItem>)ViewBag.TimeZones, new { @class = "form-control", @placeholder = "Time Zone" })
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-3">
+                    <label>UserName</label>
+                </div>
+                <div class="col-sm-9">
+                    <span>@Model.User.UserName</span>
+                </div>
 
 
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <button type="submit" class="btn btn-primary">Save Profile</button>
+                </div>
+            </div>
+        }
     </div>
-</div>
 <div class="container">
     @if (Model.TutorProfile != null)
     {
@@ -159,3 +189,14 @@
         <a class="btn btn-primary" href="@Url.Action("TutorRegistration")">Add a Tutor Profile</a>
     }
 </div>
+@section Scripts{
+    <script>
+        function SaveUserProfile_Success() {
+            var myToast = Toastify({
+                text: "The profile has been saved",
+                duration: 2000
+            });
+            myToast.showToast();
+        }
+    </script>
+    }
